Fix issue with inital load indicator, fix alignment on logo

--- a/src/components/MainNavBar/MainNavBar.scss
+++ b/src/components/MainNavBar/MainNavBar.scss
@@ -1,6 +1,7 @@
 #logo {
   width: 137.5px;
   height: 25px;
+  align-self: center;
 }
 
 .inner {
@@ -101,6 +102,16 @@
           text-decoration: none;
           font-weight: 500;
           color: #333;
+
+          &::after {
+            content: "";
+            height: 6px;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background-color: #209fa6;
+          }
         }
       }
 
@@ -114,17 +125,6 @@
 
         &.nav-item {
           justify-content: space-around;
-
-          &.selected {
-            &::after {
-              content: "";
-              height: 6px;
-              width: 100%;
-              position: absolute;
-              bottom: 0;
-              background-color: #209fa6;
-            }
-          }
         }
 
         .user-avatar {
